assets/css/style.css
/*I use Goole fonts for fonts*/
@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Great+Vibes&family=Gudea&family=Montserrat:wght@100;200;300;400&family=Playfair+Display&display=swap');


/* Reset */

* {
 margin: 0; 
  padding: 0;
  border: 0;

}

body {
  font-family: 'Playfair Display', serif;
  color: #333;
  padding: 0;
  margin: 0;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: 'Playfair Display', serif;
  ;
}

p,
a {
  font-family: 'Montserrat', sans-serif;
  ;
}


a {
  text-decoration: none;
}

/* ULs */
ul {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}

ul li {
  list-style: none;
}

ul li a {
  padding: 10px;
  display: inline-block;
  transition: color .25s ease-in-out;
}

ul li a:hover {
  color: #627a7b;
}

.mobile-nav a i {
  font-size: 25px;
}




/* Grid system */

.container {
  width: 100%;
  max-width: 1280px;
  margin-left: auto;
  margin-right: auto;
  padding-left: 15px;
  padding-right: 15px;
}

.row {
  display: flex;
  flex-wrap: wrap;
  margin-left: -15px;
  margin-right: -15px;
  width: 100%;
}

.column {
  text-align: center;
  flex-grow: 1;
  flex-shrink: 1;
  width: 100%;
  margin: 15px;
}


/* Card system */
.card {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.card-section {
  padding: 30px;

}

.card-section p:last-child {
  margin-bottom: 0;
}

/* Header */
.header {
  background-color: #101820;
  padding-top: 15px;
  padding-bottom: 15px;
  box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.6);
  -webkit-box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.6);
  -moz-box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.6);
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 999;
}



.header .logo a {
  color: #fafafa;
  font-size: 2rem;
  font-family: 'Great Vibes', cursive;
}
.header .logo a:hover {
  transition: color .25s ease-in-out;
  color: #627a7b;
}

.header-nav {
  align-items: center;
}

.header-nav a {
  color: #fafafa;

}



/* Hero */
.hero-outer {
  width: 100%;
  overflow: hidden;
  position: relative;
}

.hero-outer .row {
  justify-content: center;
}

.hero-text {
  padding-top: 150px;
  padding-bottom: 150px;
  position: relative;
  justify-content: center;
  z-index: 1;
  color: #fafafa;
}

.hero-text h1 {
  font-size: 60px;
}

.hero-text h3 {
  font-size: 20px;
}


.logo-img {
  max-width: 100%;
  justify-content: center;
}


.hero-image {
  /*free to use image taken from https://pixabay.com/*/
  background-color: #627a7b;
  background-image: url("../images/hero-image.webp");
  background-repeat: no-repeat;
  background-position: center center;
  width: 100%;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-size: cover;
  z-index: -1;
}

.opaque-overlay {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  background-color: rgba(0, 0, 0, 0.4);
}

/*Welcome area*/
.welcome {
  padding-top: 25px;
  padding-bottom: 25px;
  margin-top: 0px;
  color: #333;

}

.break-line {
  color: #627a7b;
  width: 100%;
  max-width: 400px;
  Border: 1px;
  border-style: solid;
  border-radius: 5px;
  margin: auto;
  margin-top: 50px;
  margin-bottom: 25px;
  justify-content: center;
}

.welcome-text h3 { 
  font-size: medium;
  font-family: 'Montserrat', serif;
}  

.welcome .row {
  justify-content: center;
}

/* Menus section */
.menus {
  padding-top: 0px;
  padding-bottom: 50px;
  color: #fafafa;
}

.menu-pics {
  width: 100%;
}

/*Reviews section*/
.reviews .slick-dots {
  bottom: -35px;
}

.reviews .card {
  color: #333;
}

.reviews .row {
  justify-content: center;
}

.reviews .reviews-slick {
  max-width: 100%;
}

.star-rating {
  color: gold;
}

/* Info section */
.info-outer {
  padding-top: 30px;
  padding-bottom: 30px;
  overflow: hidden;
  position: relative;
}

.column-menus {
  background-color: #627a7b;
  /*For this shadow I've used https://cssgenerator.org/box-shadow-css-generator.html*/
  box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.6);
  -webkit-box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.6);
  -moz-box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.6);
}

.column-info {
  background-color: #627a7b;
  color: #fafafa;
  /*For this shadow I've used https://cssgenerator.org/box-shadow-css-generator.html*/
  box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.6);
  -webkit-box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.6);
  -moz-box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.6);
}



/*Footer*/
footer {
  position: relative;
  overflow: hidden;
  background-color: #101820;
  color: #627a7b;
  text-align: center;
}

.social-networks {
  text-align: center;
  font-size: 200%;
  margin: 1%;
  padding: 10px;
  color: #627a7b;
}

.social-networks li {
  display: inline;
}

.social-networks a i::before {
  transition: color .25s ease-in-out;
  color: #627a7b;

}

.social-networks a:visited i::before,
a:active i::before {
  color: #627a7b;
}

.social-networks a:hover i::before {
  color: #fafafa;
}

/*Links decorations*/
.contact-btn {
  border: 2px solid #fafafa;
  padding: 8px 20px;
  border-radius: 100px;
  color: #fafafa;
  transition: background-color .25s ease-in-out, border-color .25s ease-in-out;
}

.contact-btn:visited,
.contact-btn:active {
  color: #fafafa;
}

.contact-btn:hover {
  color: #fafafa;
  background-color: #101820;
  border-color: #101820;
}

.column-menus a:visited,
.column-menus a:active {
  color: #fafafa;
}

.column-menus a:hover {
  color: #101820;
}


/*------------------------------gallery-----------------------------*/

.gallery{padding-top: 15px;
}
.gallery img{
  width: 100%;
  height: 300px;
  /* border-radius: 5%; */
}
.gallery img:hover {
  transform: scale(1.1);
  transition: ease-in-out .5s;
  box-shadow: 0 0 0 1px #627a7b;
}



/*-----------------------------Contact page-------------------------*/

  .contact-details {
  position: relative;
  justify-content: center;
  padding: 25px;
  color: #333;
  }
 
  input[type=text], select _{
  width: 90%;
    padding: 5px 20px;
    margin: 5px 0;
    display: inline-block;
    border: 1px solid #333;
    border-radius: 5px;  
    font-family:'Playfair Display', serif;
  }
  input[type=email], select _{
      width: 90%;
      padding: 5px 20px;
      margin: 5px 0;
      display: inline-block;
      border: 1px solid #333;
      border-radius: 5px;  
      font-family:'Playfair Display', serif;
  }  
  input[type=text]:focus{
        outline: 2px solid #627a7b;
    }
    input[type=email]:focus{
      outline: 2px solid #627a7b;
  }
    textarea {
      width: 90%;
      height: 100px;
      margin: 5px 0;
      padding: 5px 20px;
      border: 1px solid #333;
      border-radius: 5px;
      display: inline-block;
      font-family:'Playfair Display', serif;
      font-size: 14px;
    }
  
  textarea:focus {
  outline: 2px solid #627a7b;
    
  }
  .contact-details .contact-btn {
    background-color: #627a7b;
  }
  
                  

/*-----------------------------Media Queries------------------------*/

@media only screen and (max-width: 639px) {
  .grid-responsive {
    flex-direction: column;
  }
}

@media only screen and (min-width: 639px) {
  .grid-responsive {
    flex-direction: row;
  }
}

/*  Reusable grid columns */
@media only screen and (min-width: 0) and (max-width: 639px) {


  .m-col-3 {
    max-width: calc(33% - 30px);
  }

  .m-col-6 {
    max-width: calc(50% - 30px);
  }
}

@media only screen and (min-width: 640px) and (max-width: 1023px) {
  .t-col-3 {
    max-width: calc(33% - 30px);
  }

  .t-col-6 {
    max-width: calc(50% - 30px);
  }
}

@media only screen and (min-width: 1024px) {
  .d-col-3 {
    max-width: calc(33% - 30px);
  }

  /* make a col-number and work out the width */
  .d-col-6 {
    max-width: calc(50% - 30px);
  }
}


@media only screen and (max-width: 1023px) {

  .header .column {
    text-align: left;
  }

  .header .column+.column {
    text-align: right;
  }

  .desktop-nav {
    display: none !important;
  }

  .mobile-nav {
    margin-top: 0;
    margin-bottom: 0;
  }

  .mobile-nav ul {
    display: flex;
    flex-direction: column;
  }

  .mobile-nav #burger-menu  {
    display: none;
  }

  
}

@media only screen and (min-width: 1024px) {
  .mobile-nav {
    display: none !important;
  }

  /*Nav bar dropdown menu*/
  .desktop-nav .dropbtn {
    font-family: 'Montserrat', serif;
    background-color: #101820;
    color: #fafafa;
    padding: 10px;
    font-size: inherit;
    border: none;
    text-align: center;
  }

  .desktop-nav .dropdown {
    position: relative;
    display: inline-block;
  }

  .desktop-nav .dropdown-content {
    display: none;
    position: absolute;
    background-color: #101820;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
  }

  .desktop-nav .dropdown-content a {
    text-decoration: none;
    display: block;
  }

  .desktop-nav .dropdown:hover .dropdown-content {
    display: block;
  }
}

